fix search input vertical alignment and footer links to open inbrowser window

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -53,3 +53,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "pages/category-view";
 @import "pages/detail-view";
 @import "pages/videos";
+
+.item-input-inset .item-input-wrapper input {
+	line-height: 28px;
+}
