--- a/scss/layout/_side-menu.scss
+++ b/scss/layout/_side-menu.scss
@@ -4,10 +4,7 @@
   // width: 25%;
   padding-left: 13px;
   padding-top: 10px;
-  a {
-    text-decoration: none;
-    font-size: 12px;
-    color: #858585;
-    font-family: $san-reg;
-  }
+  font-size: 12px;
+  color: #858585;
+  font-family: $san-reg;
 }
